--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.14.0",
     "next": "13.0.4",
     "next-auth": "^4.17.0",
     "react": "18.2.0",
