--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.0.8",
+    "@emoji-mart/react": "^1.0.1",
+    "emoji-mart": "^5.3.3",
     "firebase": "^9.14.0",
     "next": "13.0.4",
     "next-auth": "^4.17.0",
